Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95580

Crash on GetFaviconsForURL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.0, 6.2.1, 6.3.0 Alpha
    • 6.2.0 Beta2
    • WebEngine
    • None
    • Linux/X11
    • 498c4ac362cb6cbee8a30c8cc46fa4253bf93ee0 (qt/qtwebengine/dev) a1f6c0fcaf072e49b1737d250a1fe15adb1eb10c (qt/qtwebengine/6.2) 78898d5adb833e90e8435c728ec0ff339d2cd5a6 (qt/qtwebengine/6.2.0)

    Description

      Rare crash happens in main process main thread in bunch of tests like:

      tst_QWebEngineUrlRequestInterceptor::jsServiceWorker
      tst_QWebEnginePage::registerProtocolHandler(accept)

      but basically affects every use case with non-otr profile.
      Stack:

      history::HistoryService::GetFaviconsForURL(GURL const&, base::internal::flat_tree<favicon_base::IconType, base::identity, std::less<void>, std::vector<favicon_base::IconType, std::allocator<favicon_base::IconType> > > const&, std::vector<int, std::allocator<int> > const&, b
      favicon::FaviconServiceImpl::GetFaviconForPageURLImpl(GURL const&, base::internal::flat_tree<favicon_base::IconType, base::identity, std::less<void>, std::vector<favicon_base::IconType, std::allocator<favicon_base::IconType> > > const&, std::vector<int, std::allocator<int>
      favicon::FaviconServiceImpl::GetFaviconForPageURL(GURL const&, base::internal::flat_tree<favicon_base::IconType, base::identity, std::less<void>, std::vector<favicon_base::IconType, std::allocator<favicon_base::IconType> > > const&, int, base::OnceCallback<void (std::vector
      favicon::FaviconHandler::FetchFavicon(GURL const&, bool) at favicon_handler.cc:241
      QtWebEngineCore::FaviconDriverQt::FetchFavicon(GURL const&, bool) at favicon_driver_qt.cpp:133
      QtWebEngineCore::FaviconDriverQt::DidFinishNavigation(content::NavigationHandle*) at favicon_driver_qt.cpp:340
      void content::WebContentsImpl::WebContentsObserverList::NotifyObservers<void (content::WebContentsObserver::*)(content::NavigationHandle*), content::NavigationHandle*&>(void (content::WebContentsObserver::*)(content::NavigationHandle*), content::NavigationHandle*&) at web_c
      content::WebContentsImpl::DidFinishNavigation(content::NavigationHandle*) at web_contents_impl.cc:5257
      content::NavigationRequest::~NavigationRequest() at navigation_request.cc:1398
      content::NavigationRequest::~NavigationRequest() at navigation_request.cc:1357
      content::Navigator::DidNavigate(content::RenderFrameHostImpl*, content::mojom::DidCommitProvisionalLoadParams const&, std::unique_ptr<content::NavigationRequest, std::default_delete<content::NavigationRequest> >, bool) at unique_ptr.h:85
      content::RenderFrameHostImpl::DidCommitNavigationInternal(std::unique_ptr<content::NavigationRequest, std::default_delete<content::NavigationRequest> >, mojo::StructPtr<content::mojom::DidCommitProvisionalLoadParams>, mojo::InlinedStructPtr<content::mojom::DidCommitSameDocu
      content::RenderFrameHostImpl::DidCommitNavigation(content::NavigationRequest*, mojo::StructPtr<content::mojom::DidCommitProvisionalLoadParams>, mojo::StructPtr<content::mojom::DidCommitProvisionalLoadInterfaceParams>) at render_frame_host_impl.cc:9383
      

      symptom is that history_service_ is nullptr for favicon service, but favicon is still requested

      Attachments

        For Gerrit Dashboard: QTBUG-95580
        # Subject Branch Project Status CR V

        Activity

          People

            kiburtse Kirill Burtsev
            kiburtse Kirill Burtsev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes